There was a bug with the <sup> tag in the .product-details that pushed the line height of the <p>. Used vertical align and changed the font size of the sup to fix this.

--- a/css/materiales.scss
+++ b/css/materiales.scss
@@ -73,11 +73,18 @@ body {
 
 .detail-section {
 	margin-bottom: 19px;
+
+	sup {
+		vertical-align: top;
+		font-size: 0.75em;
+
+	}
 }
 
 .link-card {
 	@include link-card-structure;
 	@include link-card-typographies;
+	
 }
 
 
